syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

package cosmos_notifier_grpc;

option go_package = "go/tracker_service";

service TrackerService {
  rpc IsAddressValid (IsAddressValidRequest) returns (IsAddressValidResponse) {}
  rpc AddTracker (AddTrackerRequest) returns (AddTrackerResponse) {}
  rpc UpdateTracker (UpdateTrackerRequest) returns (UpdateTrackerResponse) {}
  rpc DeleteTracker (DeleteTrackerRequest) returns (google.protobuf.Empty) {}
}

message IsAddressValidRequest {
  string address = 1;
}

message IsAddressValidResponse {
  bool isValid = 1;
}

message AddTrackerRequest {
  string address = 1;
  google.protobuf.Duration notificationInterval = 2;
  int64 discordChannelId = 3;
  int64 telegramChatId = 4;
}

message AddTrackerResponse {
  int64 trackerId = 1;
  string address = 2;
  google.protobuf.Duration notificationInterval = 3;
  int64 discordChannelId = 4;
  int64 telegramChatId = 5;
}

message UpdateTrackerRequest {
  int64 trackerId = 1;
  google.protobuf.Duration notificationInterval = 3;
  int64 discordChannelId = 4;
  int64 telegramChatId = 5;
}

message UpdateTrackerResponse {
  int64 trackerId = 1;
  string address = 2;
  google.protobuf.Duration notificationInterval = 3;
  int64 discordChannelId = 4;
  int64 telegramChatId = 5;
}

message DeleteTrackerRequest {
  int64 trackerId = 1;
}
